feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1395,7 +1395,7 @@
         "}}\n",
         "<@Cyan>Press <@Magenta>Enter<@Cyan> key to update!"
       ],
-      "updating": "<@Cyan>Successfully run the command: <@Magenta>Update-Module PSCompletions\n<@Cyan>Updating PSCompletions module",
+      "updating": "<@Cyan>Successfully run the command: <@Magenta>Update-Module PSCompletions\n<@Cyan>Updating PSCompletions module...",
       "update_done": "<@Green>PSCompletions module update completed.Please restart the PowerShell and re-import the module",
       "update_err": [
         "<@Red>PSCompletions module update failed.\n",
