--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1397,7 +1397,7 @@
         "}}\n",
         "<@Cyan>按下 <@Magenta>Enter(回车键)<@Cyan> 进行更新!"
       ],
-      "updating": "<@Cyan>成功运行命令: <@Magenta>Update-Module PSCompletions \n<@Cyan>PSCompletions 模块更新正在进行中",
+      "updating": "<@Cyan>成功运行命令: <@Magenta>Update-Module PSCompletions \n<@Cyan>PSCompletions 模块正在更新...",
       "update_done": "<@Green>PSCompletions 模块更新完成, 请重启 PowerShell 并重新引入模块",
       "update_err": [
         "<@Red>PSCompletions 模块更新失败, 请检查原因\n",
