fix(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1238,10 +1238,10 @@
       " - Completion tip is only a helper, you can also hide the tip by running <@Magenta>psc menu config menu_show_tip 0<@Cyan>\n",
       " - General structure of the completion tip: <@Magenta>Usage<@Cyan> + <@Magenta>Description<@Cyan> + <@Magenta>Example<@Cyan>\n",
       "------------- Tip Example --------------\n\n",
-      "U: install|add <app> [-g|-u] [options]\n",
+      "U: install|add [-g|-u] [options] <app> \n",
       "This is a description of the command.\n",
-      "E: list\n",
-      "   list --remote\n\n",
+      "E: install xxx\n",
+      "   add -g xxx\n\n",
       "----------------------------------------\n",
       "- Example Analysis:\n",
       "  1. Usage: Begin with <@Magenta>U: <@Cyan>\n",
@@ -1251,7 +1251,7 @@
       "       - The values in <> are a simple summary of the parameters.\n",
       "     - optional parameters: <@Magenta>-g<@Cyan> <@Magenta>-u<@Cyan>\n",
       "       - [options] : Some options\n",
-      "  2. Description: the description of the command\n",
+      "  2. Description: The description of the command\n",
       "  3. Example: Begin with <@Magenta>E: <@Cyan>\n",
       "\n",
       "About completion menu provided by PSCompletions module:\n",
@@ -1315,10 +1315,10 @@
       " - Completion tip is only a helper, you can also hide the tip by running <@Magenta>psc menu config menu_show_tip 0<@Cyan>\n",
       " - General structure of the completion tip: <@Magenta>Usage<@Cyan> + <@Magenta>Description<@Cyan> + <@Magenta>Example<@Cyan>\n",
       "------------- Tip Example --------------\n\n",
-      "U: install|add <app> [-g|-u] [options]\n",
+      "U: install|add [-g|-u] [options] <app> \n",
       "This is a description of the command.\n",
-      "E: list\n",
-      "   list --remote\n\n",
+      "E: install xxx\n",
+      "   add -g xxx\n\n",
       "----------------------------------------\n",
       "- Example Analysis:\n",
       "  1. Usage: Begin with <@Magenta>U: <@Cyan>\n",
@@ -1328,7 +1328,7 @@
       "       - The values in <> are a simple summary of the parameters.\n",
       "     - optional parameters: <@Magenta>-g<@Cyan> <@Magenta>-u<@Cyan>\n",
       "       - [options] : Some options\n",
-      "  2. Description: the description of the command\n",
+      "  2. Description: The description of the command\n",
       "  3. Example: Begin with <@Magenta>E: <@Cyan>\n",
       "\n",
       "About completion menu provided by PSCompletions module:\n",
