--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1234,11 +1234,11 @@
       " - 补全提示信息只是辅助, 你也可以使用 <@Magenta>psc menu config menu_show_tip 0<@Cyan> 来禁用补全提示信息的显示\n",
       " - 补全提示信息一般由三部分组成: <@Magenta>用法<@Cyan> + <@Magenta>描述<@Cyan> + <@Magenta>举例<@Cyan>\n",
       "-----------------示例--------------------\n\n",
-      "U: install|add <app> [-g|-u] [options]\n",
+      "U: install|add [-g|-u] [options] <app> \n",
       "这里是命令的描述说明\n",
       "在 U: 和 E: 之间的内容都是命令描述\n",
-      "E: list\n",
-      "   list --remote\n\n",
+      "E: install xxx\n",
+      "   add -g xxx\n\n",
       "----------------------------------------\n",
       "- 示例解析:\n",
       "  1. 用法: 以 <@Magenta>U: <@Cyan>开头(Usage)\n",
@@ -1248,7 +1248,7 @@
       "       - <> 里的值是对必填参数的简要概括\n",
       "     - 可选参数: <@Magenta>-g<@Cyan> <@Magenta>-u<@Cyan>\n",
       "       - [options] 表示泛指一些选项\n",
-      "  2. 描述: U: 和 E: 之间的内容是命令描述\n",
+      "  2. 描述: 在 U: 和 E: 中间的内容就是命令描述\n",
       "  3. 举例: 以 <@Magenta>E: <@Cyan> 开头(Example), 及其之后的内容\n",
       "     - 示例的起始命令通常是当前补全命令附近, 不会从头开始列出\n",
       "\n",
@@ -1316,11 +1316,11 @@
       " - 补全提示信息只是辅助, 你也可以使用 <@Magenta>psc menu config menu_show_tip 0<@Cyan> 来禁用补全提示信息的显示\n",
       " - 补全提示信息一般由三部分组成: <@Magenta>用法<@Cyan> + <@Magenta>描述<@Cyan> + <@Magenta>举例<@Cyan>\n",
       "-----------------示例--------------------\n\n",
-      "U: install|add <app> [-g|-u] [options]\n",
+      "U: install|add [-g|-u] [options] <app> \n",
       "这里是命令的描述说明\n",
       "在 U: 和 E: 之间的内容都是命令描述\n",
-      "E: list\n",
-      "   list --remote\n\n",
+      "E: install xxx\n",
+      "   add -g xxx\n\n",
       "----------------------------------------\n",
       "- 示例解析:\n",
       "  1. 用法: 以 <@Magenta>U: <@Cyan>开头(Usage)\n",
@@ -1330,7 +1330,7 @@
       "       - <> 里的值是对必填参数的简要概括\n",
       "     - 可选参数: <@Magenta>-g<@Cyan> <@Magenta>-u<@Cyan>\n",
       "       - [options] 表示泛指一些选项\n",
-      "  2. 描述: U: 和 E: 之间的内容是命令描述\n",
+      "  2. 描述: 在 U: 和 E: 中间的内容就是命令描述\n",
       "  3. 举例: 以 <@Magenta>E: <@Cyan> 开头(Example), 及其之后的内容\n",
       "     - 示例的起始命令通常是当前补全命令附近, 不会从头开始列出\n",
       "\n",
