feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1256,14 +1256,17 @@
       "\n",
       "About completion menu provided by PSCompletions module:\n",
       "- It can only be used in PowerShell(pwsh) under Windows.\n",
-      "- When you use it, you can select previous or next option in the following keys:\n",
-      "   - Select previous/Select next\n",
-      "   1. Up/Down\n",
-      "   2. Left/Right\n",
-      "   3. Tab/Shift + Tab\n",
-      "   4. Space/Shift + Space\n",
-      "   5. Ctrl + U/Ctrl + D\n",
-      "   6. Ctrl + P/Ctrl + N\n",
+      "- Some keys in the completion menu provided by the module.\n",
+      "   1. Apply the selected completion item: <@Magenta>Enter<@Cyan>\n",
+      "   2. Exit the completion menu: <@Magenta>ESC<@Cyan>/<@Magenta>Ctrl + c<@Cyan>\n",
+      "   3. Select completion item: \n",
+      "      - Select previous item/Select next item\n",
+      "      - <@Magenta>Up<@Cyan>/<@Magenta>Down<@Cyan>\n",
+      "      - <@Magenta>Left<@Cyan>/<@Magenta>Right<@Cyan>\n",
+      "      - <@Magenta>Tab<@Cyan>/<@Magenta>Shift + Tab<@Cyan>\n",
+      "      - <@Magenta>Space<@Cyan>/<@Magenta>Shift + Space<@Cyan>\n",
+      "      - <@Magenta>Ctrl + u<@Cyan>/<@Magenta>Ctrl + d<@Cyan>\n",
+      "      - <@Magenta>Ctrl + p<@Cyan>/<@Magenta>Ctrl + n<@Cyan>\n",
       "- All configurations of it, you can trigger completion by running <@Magenta>psc menu<@Cyan>, then learn about them by completion tip.\n",
       "\n",
       "About other information of PSCompletions module:\n",
