--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1254,14 +1254,17 @@
       "\n",
       "关于模块提供的补全菜单:\n",
       "- 模块提供的补全菜单只能在 Windows 系统下使用 PowerShell(pwsh) 运行, 其他环境只能使用 PowerShell 自带的补全菜单\n",
-      "- 在此补全菜单中, 你可以使用以下按键进行选择补全项\n",
-      "   - 选择上一项/选择下一项\n",
-      "   1. Up/Down\n",
-      "   2. Left/Right\n",
-      "   3. Tab/Shift + Tab\n",
-      "   4. Space/Shift + Space\n",
-      "   5. Ctrl + U/Ctrl + D\n",
-      "   6. Ctrl + P/Ctrl + N\n",
+      "- 模块提供的补全菜单中的按键\n",
+      "   1. 应用选中的补全项: <@Magenta>Enter<@Cyan>(回车键)\n",
+      "   2. 退出补全菜单: <@Magenta>ESC<@Cyan>/<@Magenta>Ctrl + c<@Cyan>\n",
+      "   3. 选择补全项: \n",
+      "      - 选择上一项/选择下一项\n",
+      "      - <@Magenta>Up<@Cyan>/<@Magenta>Down<@Cyan>\n",
+      "      - <@Magenta>Left<@Cyan>/<@Magenta>Right<@Cyan>\n",
+      "      - <@Magenta>Tab<@Cyan>/<@Magenta>Shift + Tab<@Cyan>\n",
+      "      - <@Magenta>Space<@Cyan>/<@Magenta>Shift + Space<@Cyan>\n",
+      "      - <@Magenta>Ctrl + u<@Cyan>/<@Magenta>Ctrl + d<@Cyan>\n",
+      "      - <@Magenta>Ctrl + p<@Cyan>/<@Magenta>Ctrl + n<@Cyan>\n",
       "- 补全菜单的所有配置, 你可以使用 <@Magenta>psc menu<@Cyan> 触发补全, 通过命令提示信息来了解\n",
       "\n",
       "关于模块的其他信息:\n",
