fix(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -818,7 +818,7 @@
               "tip": [
                 "Current value: {{ $PSCompletions.config.menu_show_tip }} (Default: 1, it means enabled.)\n",
                 "Set whether to show the completion tip.\n",
-                "(If the display area of the terminal is too small, it automatically hides the completion tip.)"
+                "(If the display area of the PowerShell is too small, it automatically hides the completion tip.)"
               ],
               "next": [
                 {
@@ -1260,13 +1260,15 @@
       "   1. Apply the selected completion item: <@Magenta>Enter<@Cyan>\n",
       "   2. Exit the completion menu: <@Magenta>ESC<@Cyan>/<@Magenta>Ctrl + c<@Cyan>\n",
       "   3. Select completion item: \n",
-      "      - Select previous item/Select next item\n",
-      "      - <@Magenta>Up<@Cyan>/<@Magenta>Down<@Cyan>\n",
-      "      - <@Magenta>Left<@Cyan>/<@Magenta>Right<@Cyan>\n",
-      "      - <@Magenta>Tab<@Cyan>/<@Magenta>Shift + Tab<@Cyan>\n",
-      "      - <@Magenta>Space<@Cyan>/<@Magenta>Shift + Space<@Cyan>\n",
-      "      - <@Magenta>Ctrl + u<@Cyan>/<@Magenta>Ctrl + d<@Cyan>\n",
-      "      - <@Magenta>Ctrl + p<@Cyan>/<@Magenta>Ctrl + n<@Cyan>\n",
+      "     ┌───────────────┬───────────────┐\n",
+      "     │ Previous Item │   Next Item   │\n",
+      "     │       <@Magenta>Up<@Cyan>      │     <@Magenta>Down<@Cyan>      │\n",
+      "     |      <@Magenta>Left<@Cyan>     │     <@Magenta>Right<@Cyan>     │\n",
+      "     │  <@Magenta>Shift + Tab<@Cyan>  │      <@Magenta>Tab<@Cyan>      │\n",
+      "     │ <@Magenta>Shift + Space<@Cyan> │     <@Magenta>Space<@Cyan>     │\n",
+      "     │   <@Magenta>Ctrl + u<@Cyan>    │   <@Magenta>Ctrl + d<@Cyan>    │\n",
+      "     │   <@Magenta>Ctrl + p<@Cyan>    │   <@Magenta>Ctrl + n<@Cyan>    │\n",
+      "     └───────────────┴───────────────┘\n",
       "- All configurations of it, you can trigger completion by running <@Magenta>psc menu<@Cyan>, then learn about them by completion tip.\n",
       "\n",
       "About other information of PSCompletions module:\n",
@@ -1286,7 +1288,7 @@
       "  1. Install the PSCompletions module in the built-in Windows powershell on the Windows system started in administrator mode.\n",
       "  2. The installation is accidentally using <@Magenta>-Scope AllUser<@Yellow>\n",
       "If you are in the case, you should use <@Magenta>-Scope CurrentUser<@Yellow> to reinstall the module, unless you are in the following case:\n",
-      "  1. You already know that the module installed in administrator mode can have permission issues when used with user mode.\n",
+      "  1. You already know that the PSCompletions module installed in administrator mode can have permission issues when used with user mode.\n",
       "  2. You always use the administrator mode to open PowerShell, and never use the user mode.\n\n",
       "<@Blue>Full installation command: <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Cyan>\n\n",
       "---------------------------------------------------------------------\n",
