--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -807,7 +807,7 @@
               "tip": [
                 "当前值: {{ $PSCompletions.config.menu_show_tip }} (默认值为 1, 表示启用)\n",
                 "设置是否需要补全提示信息\n",
-                "当启用时, 如果终端显示区域过小, 会自动隐藏补全提示信息, 以便能正常显示补全项"
+                "当启用时, 如果 PowerShell 显示区域过小, 会自动隐藏补全提示信息, 以便能正常显示补全项"
               ],
               "next": [
                 {
@@ -1258,13 +1258,15 @@
       "   1. 应用选中的补全项: <@Magenta>Enter<@Cyan>(回车键)\n",
       "   2. 退出补全菜单: <@Magenta>ESC<@Cyan>/<@Magenta>Ctrl + c<@Cyan>\n",
       "   3. 选择补全项: \n",
-      "      - 选择上一项/选择下一项\n",
-      "      - <@Magenta>Up<@Cyan>/<@Magenta>Down<@Cyan>\n",
-      "      - <@Magenta>Left<@Cyan>/<@Magenta>Right<@Cyan>\n",
-      "      - <@Magenta>Tab<@Cyan>/<@Magenta>Shift + Tab<@Cyan>\n",
-      "      - <@Magenta>Space<@Cyan>/<@Magenta>Shift + Space<@Cyan>\n",
-      "      - <@Magenta>Ctrl + u<@Cyan>/<@Magenta>Ctrl + d<@Cyan>\n",
-      "      - <@Magenta>Ctrl + p<@Cyan>/<@Magenta>Ctrl + n<@Cyan>\n",
+      "     ┌───────────────┬───────────────┐\n",
+      "     │   选择上一项  │   选择下一项  │\n",
+      "     │       <@Magenta>Up<@Cyan>      │     <@Magenta>Down<@Cyan>      │\n",
+      "     |      <@Magenta>Left<@Cyan>     │     <@Magenta>Right<@Cyan>     │\n",
+      "     │  <@Magenta>Shift + Tab<@Cyan>  │      <@Magenta>Tab<@Cyan>      │\n",
+      "     │ <@Magenta>Shift + Space<@Cyan> │     <@Magenta>Space<@Cyan>     │\n",
+      "     │   <@Magenta>Ctrl + u<@Cyan>    │   <@Magenta>Ctrl + d<@Cyan>    │\n",
+      "     │   <@Magenta>Ctrl + p<@Cyan>    │   <@Magenta>Ctrl + n<@Cyan>    │\n",
+      "     └───────────────┴───────────────┘\n",
       "- 补全菜单的所有配置, 你可以使用 <@Magenta>psc menu<@Cyan> 触发补全, 通过命令提示信息来了解\n",
       "\n",
       "关于模块的其他信息:\n",
@@ -1284,8 +1286,8 @@
       "  1. 在以管理员模式启动的 Windows 系统内置的 Windows powershell 中安装 PSCompletions 模块\n",
       "  2. 安装时意外使用了 <@Magenta>-Scope AllUser<@Yellow>\n",
       "如果属于以上情况, 你应该重新安装模块, 使用 <@Magenta>-Scope CurrentUser<@Yellow>, 除非你符合以下前提:\n",
-      "  1. 你已知晓以管理员模式安装的模块在用户权限下使用会出现权限问题\n",
-      "  2. 你始终使用管理员模式打开 PowerShell, 不会使用用户权限打开终端\n\n",
+      "  1. 你已知晓以管理员模式安装的 PSCompletions 模块在用户权限下使用会出现权限问题\n",
+      "  2. 你始终使用管理员模式打开 PowerShell, 不会使用用户权限打开 PowerShell\n\n",
       "<@Blue>完整安装命令: <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Cyan>\n\n",
       "---------------------------------------------------------------------\n",
       "<@Cyan>✨✨✨PSCompletions(<@Magenta>psc<@Cyan>) --- 初始化成功！✨✨✨\n",
