feat(completions): update psc

--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1158,6 +1158,22 @@
           ]
         },
         {
+          "name": "completion",
+          "tip": [
+            "重置(移除)所有补全或指定补全的特殊配置\n",
+            "{{ $info.reset.completion.example }}"
+          ],
+          "next": [
+            {
+              "name": "*",
+              "tip": [
+                "重置(移除)所有补全的特殊配置\n",
+                "包括 psc completion 命令下可以设置的所有的配置项"
+              ]
+            }
+          ]
+        },
+        {
           "name": "menu",
           "symbol": "SpaceTab",
           "tip": [
@@ -1473,8 +1489,9 @@
     "no_completion": "<@Red>你还未添加 <@Magenta>{{ $completion }}<@Red> 补全",
     "confirm_cancel": "<@Green>操作取消!",
     "less_tip": [
-      "<@Cyan>🔔按下 Enter 键查看更多, 按下其他任意键退出！(剩余 <@Magenta>{{ $lines }} <@Cyan>行)🔔\n",
-      "<@Yellow>--------------------"
+      "<@Yellow>┌───────────────────────────────────────────────────────┐\n",
+      "<@Yellow>│<@Cyan>按下 <@Magenta>Enter<@Cyan> 键查看更多, 按下其他任意键退出！(剩余 <@Magenta>{{ $lines }} <@Cyan>行)<@Yellow>│\n",
+      "<@Yellow>└───────────────────────────────────────────────────────┘<@Cyan>"
     ],
     "comp_hide": "⚠️由于显示区域限制, 一些补全被隐藏⚠️\n你可以通过键入补全的前缀并按 Tab 键进行过滤",
     "min_area": "显示区域宽度或高度太小!",
@@ -1768,14 +1785,10 @@
         "独立配置的优先级高于全局配置"
       ],
       "tip_v": "设置为 {{ $value }}",
-      "tip_rm": [
-        "设置为空, 表示移除 {{ $completion }} 的这个独立配置\n",
-        "移除后, 将使用默认值"
-      ],
       "example": [
-        "E: psc completion psc language en-US      --- 单独设置 psc 补全的语言为英文\n",
-        "   psc completion psc language \"\"         --- 设置为空, 表示移除这一个独立配置\n",
-        "   psc completion psc menu_show_tip 0     --- 单独设置 psc 不显示补全提示信息"
+        "E: psc completion psc menu_show_tip       --- 返回配置当前的值(如果有值)\n",
+        "   psc completion psc menu_show_tip 0     --- 单独设置 psc 不显示补全提示信息\n",
+        "   psc completion psc language en-US      --- 单独设置 psc 补全的语言为英文"
       ],
       "done": [
         "<@Green>{{ $completion }} 的独立配置修改成功!\n",
@@ -1796,7 +1809,7 @@
         "tip": [
           "{{",
           "$v = $PSCompletions.config.comp_config.$completion.language;",
-          "if($v){ \"当前值: $($v)`n\" }",
+          "if($v -notin @('',$null)){ \"当前值: $($v)`n\" }",
           "}}",
           "设置 {{ $completion }} 的语言"
         ],
@@ -1806,7 +1819,7 @@
         "tip": [
           "{{",
           "$v = $PSCompletions.config.comp_config.$completion.menu_show_tip;",
-          "if($v){ \"当前值: $($v)`n\" }",
+          "if($v -notin @('',$null)){ \"当前值: $($v)`n\" }",
           "}}",
           "设置当使用模块提供的补全菜单时, {{ $completion }} 是否显示补全提示信息"
         ],
@@ -1882,9 +1895,10 @@
     },
     "reset": {
       "example": [
-        "E: psc reset *             --- 重置所有配置\n",
-        "   psc reset menu symbol   --- 重置所有符号配置(😄🤔😎)\n",
-        "   psc reset alias psc     --- 将 psc 恢复为默认补全名"
+        "E: psc reset *                --- 重置所有配置\n",
+        "   psc reset menu symbol      --- 重置所有符号配置(😄🤔😎)\n",
+        "   psc reset alias psc        --- 将 psc 恢复为默认补全名\n",
+        "   psc reset completion psc   --- 重置(移除) psc 的特殊配置\n"
       ],
       "init_confirm": [
         "<@Yellow>是否完全重置 PSCompletions 模块？\n",
@@ -1912,6 +1926,15 @@
           "E: psc reset alias *               --- 删除所有补全别名,全部恢复为默认补全名\n",
           "   psc reset alias psc             --- 将 psc 恢复为默认补全名\n",
           "   psc reset alias psc git bun     --- 将 psc git bun 恢复为默认补全名"
+        ]
+      },
+      "completion": {
+        "tip": "重置(移除) {{ $completion }} 的所有特殊配置或指定特殊配置",
+        "tip_v": "重置(移除) {{ $completion }} 的特殊配置 --- {{ $config_item }}",
+        "example": [
+          "E: psc reset completion *              --- 重置(移除)所有补全的特殊配置\n",
+          "   psc reset completion psc            --- 重置(移除) psc 的特殊配置\n",
+          "   psc reset completion psc language   --- 重置(移除) psc 的 language 这个特殊配置"
         ]
       },
       "menu": {
