--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1161,6 +1161,22 @@
           ]
         },
         {
+          "name": "completion",
+          "tip": [
+            "Reset(Remove) the special configuration of all completions or specified completions.\n",
+            "{{ $info.reset.completion.example }}"
+          ],
+          "next": [
+            {
+              "name": "*",
+              "tip": [
+                "Reset(Remove) the special configuration of all completions.\n",
+                "Include all configurations under the command ('psc completion')."
+              ]
+            }
+          ]
+        },
+        {
           "name": "menu",
           "symbol": "SpaceTab",
           "tip": [
@@ -1471,8 +1487,9 @@
     "no_completion": "<@Red>You haven't added <@Magenta>{{ $completion }}<@Red> yet.",
     "confirm_cancel": "<@Green>The operation has been canceled.",
     "less_tip": [
-      "<@Cyan>🔔Press Enter to view more, or any other key to exit!(<@Magenta>{{$lines}}<@Cyan> lines remaining)🔔\n",
-      "<@Yellow>--------------------"
+      "<@Yellow>┌────────────────────────────────────────────────────────────────────────────┐\n",
+      "<@Yellow>│<@Cyan>Press <@Magenta>Enter<@Cyan> key to view more, or any other key to exit! (<@Magenta>{{ $lines }}<@Cyan> lines remaining)<@Yellow>│\n",
+      "<@Yellow>└────────────────────────────────────────────────────────────────────────────┘<@Cyan>"
     ],
     "comp_hide": "⚠️Due to the limited display area size, some completions have been hidden⚠️\nYou can filter by entering the prefix of the completion and pressing Tab",
     "min_area": "The area is too small!",
@@ -1766,14 +1783,10 @@
         "Special configurations have higher priority than global configurations."
       ],
       "tip_v": "Set to {{ $value }}",
-      "tip_rm": [
-        "Set to \"\", it means to remove this Special configuration of {{ $completion }}.\n",
-        "When removed, the default value will be used."
-      ],
       "example": [
-        "E: psc completion psc language zh-CN      --- Set the psc completion language to zh-CN\n",
-        "   psc completion psc language \"\"         --- It means to remove this Special configuration\n",
-        "   psc completion psc menu_show_tip 0     --- Set psc completion to not display tip"
+        "E: psc completion psc menu_show_tip       --- If it has a value, return the value\n",
+        "   psc completion psc menu_show_tip 0     --- Set psc completion to not display tip\n",
+        "   psc completion psc language en-US      --- Set the psc completion language to zh-CN"
       ],
       "done": [
         "<@Green>{{ $completion }} 's special configuration modified successfully!\n",
@@ -1794,7 +1807,7 @@
         "tip": [
           "{{",
           "$v = $PSCompletions.config.comp_config.$completion.language;",
-          "if($v){ \"Current Value: $($v)`n\" }",
+          "if($v -notin @('',$null)){ \"Current Value: $($v)`n\" }",
           "}}",
           "Set the language of {{ $completion }}."
         ],
@@ -1804,7 +1817,7 @@
         "tip": [
           "{{",
           "$v = $PSCompletions.config.comp_config.$completion.menu_show_tip;",
-          "if($v){ \"Current Value: $($v)`n\" }",
+          "if($v -notin @('',$null)){ \"Current Value: $($v)`n\" }",
           "}}",
           "Set whether to display completion tip for {{ $completion }} when using the completion menu provided by PSCompletions module."
         ],
@@ -1880,9 +1893,10 @@
     },
     "reset": {
       "example": [
-        "E: psc reset *             --- Reset PSCompletions module\n",
-        "   psc reset menu symbol   --- Reset all symbols(😄🤔😎)\n",
-        "   psc reset alias psc     --- Reset psc alias"
+        "E: psc reset *                --- Reset PSCompletions module\n",
+        "   psc reset menu symbol      --- Reset all symbols(😄🤔😎)\n",
+        "   psc reset alias psc        --- Reset psc alias\n",
+        "   psc reset completion psc   --- Reset(Remove) this special configuration(language) of psc\n"
       ],
       "init_confirm": [
         "<@Yellow>Reset the PSCompletions module, are you sure?\n",
@@ -1896,11 +1910,11 @@
       "done": [
         "{{",
         "if($change_list){",
-        "  \"<@Green>Reset successfully!`n<@Yellow>If it does not take effect, restart PowerShell and import the module again`n<@Cyan>Here are the changes from old to new:`n------------------------------`n\";",
+        "  \"<@Green>Reset successfully!`n<@Yellow>If it does not take effect, restart PowerShell and import the module again.`n<@Cyan>Here are the changes from old to new:`n------------------------------`n\";",
         "  ($change_list | ForEach-Object { \"<@Blue>$($_.item): <@Magenta>$($_.old_value)<@Blue> => <@Magenta>$($_.new_value)<@Blue>\" }) -join \"`n\";",
         "  \"<@Cyan>`n------------------------------\"",
         "}else{",
-        "  \"<@Green>Reset successfully!`n<@Yellow>If it does not take effect, restart PowerShell and import the module again\"",
+        "  \"<@Green>Reset successfully!`n<@Yellow>If it does not take effect, restart PowerShell and import the module again.\"",
         "}",
         "}}"
       ],
@@ -1910,6 +1924,15 @@
           "E: psc reset alias *               --- Reset all aliases\n",
           "   psc reset alias psc             --- Reset psc alias\n",
           "   psc reset alias psc git bun     --- Reset psc git bun alias"
+        ]
+      },
+      "completion": {
+        "tip": "Reset(Remove) the special configurations of {{ $completion }}",
+        "tip_v":"Reset(Remove) this special configuration of {{ $completion }} --- {{ $config_item }}",
+        "example": [
+          "E: psc reset completion *              --- Reset(Remove) the special configurations of all completions\n",
+          "   psc reset completion psc            --- Reset(Remove) the special configurations of psc\n",
+          "   psc reset completion psc language   --- Reset(Remove) this special configuration(language) of psc"
         ]
       },
       "menu": {
