--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -1987,15 +1987,31 @@
   ],
   "config": [
     {
-      "name": "max_commit",
-      "value": "20",
+      "name": "disable_hooks",
+      "value": 0,
       "values": [
-        "-1",
-        "20"
+        1,
+        0
+      ],
+      "tip": [
+        "Set whether to disable hooks. Default to 0.\n",
+        "Hooks in git are mainly used to parse commit information, branch information, etc., and then dynamically add them to some completions (such as reset,checkout,branch, etc.)\n",
+        "For example, enter <@Magenta>git reset<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue>, and you can get the resolved commit completions.\n",
+        "If you don't need it, you can disable it, which will improve the loading speed of the completion.\n",
+        "If you disable it, the <@Magenta>max_commit<@Blue> configuration will also be invalid."
+      ]
+    },
+    {
+      "name": "max_commit",
+      "value": 20,
+      "values": [
+        -1,
+        20
       ],
       "tip": [
         "The maximum number that can be parsed for a project commit.\n",
-        "If it is <@Magenta>-1<@Blue>, all commits will be parsed."
+        "If it is <@Magenta>-1<@Blue>, all commits will be parsed.\n",
+        "If there are a large number of project commits, setting <@Magenta>-1<@Blue> will affect the loading speed of the completion."
       ]
     }
   ]
