--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -317,7 +317,7 @@
               "tip": [
                 "Current Value: {{ $PSCompletions.config.symbol_SpaceTab }}\n",
                 "Setting it will affect all completion item with this type of symbol.\n",
-                "When it appears in the completion item, it means that after you choose it,\n",
+                "When it appears in the completion item, it means that after you apply it,\n",
                 "you can press Space and Tab key to continue to get command completions."
               ],
               "next": [
@@ -342,7 +342,7 @@
               "tip": [
                 "Current Value: {{ $PSCompletions.config.symbol_WriteSpaceTab }}\n",
                 "Setting it will affect all completion item with this type of symbol.\n",
-                "When it appears in the completion item, it means that after you choose it,\n",
+                "When it appears in the completion item, it means that after you apply it,\n",
                 "you can enter a string, then press Space and Tab key to continue to get command completions.\n",
                 "If the string has Spaces, Please use \"\" or '' to wrap it. e.g. 'test content'"
               ],
@@ -368,7 +368,7 @@
               "tip": [
                 "Current Value: {{ $PSCompletions.config.symbol_OptionTab }}\n",
                 "Setting it will affect all completion item with this type of symbol.\n",
-                "When it appears in the completion item, it means that after you choose it (option completion),\n",
+                "When it appears in the completion item, it means that after you apply it (option completion),\n",
                 "you can press Space and Tab key to continue to get option completions. (e.g. --verbose)"
               ],
               "next": [
@@ -1235,11 +1235,11 @@
       "About special symbol after the completion item:\n",
       "- 😄🤔😎 : If there are multiple, you can choose the effect of one of them.\n",
       "\n",
-      "   - 😄 : It means that after you choose it, you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get command completions.(Normal or optional completions)\n",
+      "   - 😄 : It means that after you apply it, you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get command completions.(Normal or optional completions)\n",
       "        - It can be customized by running <@Magenta>psc menu symbol SpaceTab <symbol><@Cyan>\n",
-      "   - 🤔 : It means that after you choose it (option completion), you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get option completions. (e.g. --verbose)\n",
+      "   - 🤔 : It means that after you apply it (option completion), you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get option completions. (e.g. --verbose)\n",
       "        - It can be customized by running <@Magenta>psc menu symbol OptionTab <symbol><@Cyan>\n",
-      "   - 😎 : It means that after you choose it (option completion), you can enter a string, then press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get the rest of option completions.\n",
+      "   - 😎 : It means that after you apply it (option completion), you can enter a string, then press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get the rest of option completions.\n",
       "        - If the string has Spaces, Please use \"\" or '' to wrap it. e.g. 'test content'\n",
       "        - If there is also 😄, it means that there are some strings to complete, you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get command completions without entering a string.\n",
       "        - It can be customized by running <@Magenta>psc menu symbol WriteSpaceTab <symbol><@Cyan>\n",
@@ -1319,11 +1319,11 @@
       "About special symbol after the completion item:\n",
       "- 😄🤔😎 : If there are multiple, you can choose the effect of one of them.\n",
       "\n",
-      "   - 😄 : It means that after you choose it, you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get command completions.(Normal or optional completions)\n",
+      "   - 😄 : It means that after you apply it, you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get command completions.(Normal or optional completions)\n",
       "        - It can be customized by running <@Magenta>psc menu symbol SpaceTab <symbol><@Cyan>\n",
-      "   - 🤔 : It means that after you choose it (option completion), you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get option completions. (e.g. --verbose)\n",
+      "   - 🤔 : It means that after you apply it (option completion), you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get option completions. (e.g. --verbose)\n",
       "        - It can be customized by running <@Magenta>psc menu symbol OptionTab <symbol><@Cyan>\n",
-      "   - 😎 : It means that after you choose it (option completion), you can enter a string, then press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get the rest of option completions.\n",
+      "   - 😎 : It means that after you apply it (option completion), you can enter a string, then press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get the rest of option completions.\n",
       "        - If the string has Spaces, Please use \"\" or '' to wrap it. e.g. 'test content'\n",
       "        - If there is also 😄, it means that there are some strings to complete, you can press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key to continue to get command completions without entering a string.\n",
       "        - It can be customized by running <@Magenta>psc menu symbol WriteSpaceTab <symbol><@Cyan>\n",
